logs/ontospy.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SPARQLWrapper'...
Listing './lib/python3.5/site-packages/SPARQLWrapper-1.8.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/ontospy'...
Listing './lib/python3.5/site-packages/ontospy/core'...
Listing './lib/python3.5/site-packages/ontospy/extras'...
Compiling './lib/python3.5/site-packages/ontospy/extras/dbpedia.py'...
***   File "./lib/python3.5/site-packages/ontospy/extras/dbpedia.py", line 101
    raise SystemExit, 1
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ontospy/extras/hacks'...
Compiling './lib/python3.5/site-packages/ontospy/extras/sparqlpy.py'...
***   File "./lib/python3.5/site-packages/ontospy/extras/sparqlpy.py", line 271
    raise SystemExit, 1
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ontospy/hacks'...
Listing './lib/python3.5/site-packages/ontospy/shell'...
Listing './lib/python3.5/site-packages/ontospy/tests'...
Listing './lib/python3.5/site-packages/ontospy/viz'...
Listing './lib/python3.5/site-packages/ontospy/viz/scripts'...
Listing './lib/python3.5/site-packages/ontospy/viz/static'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/custom'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/custom/css'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/img'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootstrap-3_3_7-dist'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootstrap-3_3_7-dist/css'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootstrap-3_3_7-dist/fonts'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootstrap-3_3_7-dist/js'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/cerulean'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/cosmo'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/custom'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/cyborg'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/darkly'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/default'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/flatly'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/fonts'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/journal'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/lumen'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/paper'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/readable'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/sandstone'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/simplex'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/slate'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/spacelab'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/superhero'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/united'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/bootswatch3_2/yeti'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/chartjs-2_4_0'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/d3-v2'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/d3-v3'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/d3-v4'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/d3pie'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/jquery'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/jquery/1_12_4'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/sigma'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/sigma/plugins'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/css'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/css/themes'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/demo'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/doc'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/doc/css'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/doc/images'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/doc/js'...
Listing './lib/python3.5/site-packages/ontospy/viz/static/libs/tooltipster/js'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/html-multi'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/html-multi/browser'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/html-single'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/legacy'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/legacy/shared'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/markdown'...
Listing './lib/python3.5/site-packages/ontospy/viz/templates/misc'...
Listing './lib/python3.5/site-packages/ontospy-1.8.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyfiglet'...
Listing './lib/python3.5/site-packages/pyfiglet/fonts'...
Listing './lib/python3.5/site-packages/pyfiglet-0.7.5.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/rdflib_jsonld'...
Listing './lib/python3.5/site-packages/rdflib_jsonld-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
